--- a/css/style.css
+++ b/css/style.css
@@ -2,34 +2,107 @@
   /* margin: 0px; */
   /* padding: 0px; */
   box-sizing: border-box;
+
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  margin: 0 auto;
+}
+.wrapper {
+  background-color: rgb(194, 194, 194);
+  width: 100%;
+}
+
+.conteiner {
   width: 100%;
   max-width: 800px;
+  background-color: white;
+  padding: 20px;
+}
+
+body a {
+  color: black;
+  text-decoration: none;
+}
+
+header p {
+  text-indent: 50px;
+  margin: 10px 0px;
+}
+
+.name {
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+h2 {
+  background-color: #000;
+  color: #fff;
+  padding: 0px 5px;
+  margin: 10px 0px;
+}
+
+ul {
+  margin: 5px 0px;
+}
+
+ul a:hover,
+ul a:focus {
+  color: orange;
+  background: #000;
+}
+
+ul a:active {
+  color: purple;
 }
 
 /* table style*/
 
 table {
   border-collapse: collapse;
-  width: 400px;
+  width: 70%;
+  margin: 40px auto 40px;
 }
 
-caption {
+th:first-child {
+  width: 10%;
+}
+
+th:nth-child(2) {
+  width: 50%;
+}
+
+table > caption {
   font-size: 16px;
   font-weight: bold;
   text-align: left;
+  margin: 5px;
 }
 
-th {
+table a:hover,
+table a:focus {
+  text-decoration: underline;
+}
+
+.table th {
   background-color: darkgray;
   color: #000;
   text-align: left;
   font-weight: bold;
+  border: 1px solid #212121;
+  padding: 8px;
+  text-transform: uppercase;
 }
 
-table td:first-child {
-  width: 30px;
+.table tr,
+.table td {
+  padding: 4px;
+  border: 1px solid #212121;
 }
 
-.conteiner {
-  width: 100%;
+.table tr:hover {
+  background-color: rgb(194, 194, 194);
+}
+
+.data-develop {
+  text-align: center;
+  font-size: 10px;
 }
