--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
   /* margin: 0px; */
   /* padding: 0px; */
   box-sizing: border-box;
-
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  line-height: 1.5;
   margin: 0 auto;
 }
 .wrapper {
@@ -25,7 +25,6 @@ body a {
 
 header p {
   text-indent: 50px;
-  margin: 10px 0px;
 }
 
 .name {
@@ -38,10 +37,17 @@ h2 {
   color: #fff;
   padding: 0px 5px;
   margin: 10px 0px;
+  letter-spacing: 5px;
+}
+
+header li::first-letter {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: red;
+  font-weight: bold;
 }
 
 ul {
-  margin: 5px 0px;
+  margin: 15px 0px;
 }
 
 ul a:hover,
